--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,13 +2,18 @@ body {
   margin: 10px;
 }
 
-article :first-child {
+p::first-letter {
   font-size: 140%;
-  font-style: italic;
-}
-article p:last-of-type {
   font-weight: bold;
 }
-ul li:nth-child(odd) {
-  color: deeppink;
+
+p::first-line {
+  font-weight: bold;
+}
+::selection {
+  background-color: deeppink;
+}
+p::before {
+  content: "...";
+  display: block;
 }
