--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,12 +2,6 @@ body {
   margin: 10px;
 }
 
-h1 {
+p {
   color: dodgerblue;
-}
-.highlight {
-  color: chocolate;
-}
-#products {
-  color: green;
 }
