I have added gradients to my div

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,6 +2,8 @@ body {
   margin: 10px;
 }
 
-p {
-  color: dodgerblue;
+.box {
+  width: 200px;
+  height: 200px;
+  background: linear-gradient(dodgerblue, yellow, pink);
 }
