--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,7 +3,8 @@ body {
 }
 
 .box {
-  width: 200px;
-  height: 200px;
-  background: linear-gradient(dodgerblue, yellow, pink);
+  width: 1000px;
+  height: 1000px;
+  background: radial-gradient(white, royalblue);
+  border: 10px solid deepskyblue;
 }
