I created a dic with the class box and added CSS for width height and background color

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,8 +3,7 @@ body {
 }
 
 .box {
-  width: 1000px;
-  height: 1000px;
-  background: radial-gradient(white, royalblue);
-  border: 10px solid deepskyblue;
+  width: 100px;
+  height: 100px;
+  background-color: gold;
 }
