--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,14 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 body {
   margin: 10px;
+}
+
+.box::before {
+  content: "Hello";
 }
 
 .box {
