--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,8 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
 body {
   margin: 10px;
 }
@@ -12,9 +7,8 @@ body {
 }
 
 .box {
-  width: 100px;
-  height: 100px;
-  background-color: gold;
-  padding: 20px;
-  border: 10px solid orange;
+  width: 150px;
+  height: 150px;
+  border: 3px solid orange;
+  overflow: scroll;
 }
